feat(add html e css base do projeto)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
@@ -19,13 +19,23 @@
 
     <section class="grid-section animais" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
-        <ul>
+        <ul class="animais-lista">
             <li>
                 <img src="img/imagem1.jpg">
+            </li>
+            <li>
                 <img src="img/imagem2.jpg">
+            </li>
+            <li>
                 <img src="img/imagem3.jpg">
+            </li>
+            <li>
                 <img src="img/imagem4.jpg">
+            </li>
+            <li>
                 <img src="img/imagem5.jpg">
+            </li>
+            <li>
                 <img src="img/imagem6.jpg">
             </li>
         </ul>
@@ -165,8 +175,8 @@
     </section>
 
     <section class="grid-section faq" id="faq">
-        <h1>Faq</h1>
-        <dl>
+        <h1 class="titulo">Faq</h1>
+        <dl class="faq-lista">
             <dt>Qual a idade dos animais?</dt>
             <dd>Lorem, ipsum dolor sit amet
                 consectetur adipisicing elit.
@@ -198,7 +208,7 @@
     </section>
 
     <section class="grid-section contato" id="contato">
-        <h1>Contato</h1>
+        <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="img/mapa.png">
         </div>
